# api/swagger/apiserver/swagger.json
@@ -43,6 +43,11 @@
         },
         "/v1/ai/roles": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
